deployments/nodejs.pod.slave.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  labels:
    jenkins-slave: nodejs
spec:
  containers:
  - name: nodejs
    image: node:12.14.0-alpine3.10
    tty: true
    command:
    - cat
  - name: docker
    image: docker:19.03.5-dind
    tty: true
    volumeMounts:
    - name: docker-registry-tls
      mountPath: /etc/docker/certs.d/docker-registry.default.svc.cluster.local
    securityContext:
      privileged: true
  - name: kubectl
    image: bitnami/kubectl:1.17-ol-7
    tty: true
    command:
      - cat
  serviceAccountName: ci-robot
  volumes:
  - name: docker-registry-tls
    secret:
      secretName: docker-registry-tls
