deployments/web.service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: fox-web
spec:
  ports: 
  - port: 80
    targetPort: 80
  selector:
    app: fox-web
